package fr.uge.tropico;

public class Season {
}
